--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,8 +5,8 @@ include_directories(SYSTEM /usr/local/include)
 
 set(CMAKE_CXX_FLAGS "-stdlib=libc++ -std=c++11")
 set(CMAKE_EXE_LINKER_FLAGS " -L/usr/local/lib")
-file(GLOB sauce "./src/*.cpp" "./src/*.hpp")
-add_executable(audiotest ${sauce})
+file(GLOB sauce "../src/*.cpp" "../src/*.hpp")
+add_executable(audiotest ${sauce} "./main.cpp")
 target_link_libraries(audiotest portaudio ogg vorbis vorbisfile lua.5.2)
 
 
